# hackathon-2-phase-5

./: .gitignore  CLAUDE.md  DOCKER_COMPOSE_README.md  DOCKER_COMPOSE_SUMMARY.md  PHASE5_FIXES_SUMMARY.md  PHASE_V_FEATURES.md  QWEN.md  README.md  docker-compose.yml  start-dev.sh
backend/: .dockerignore  .env.example  AGENT_IMPLEMENTATION.md  Dockerfile  jwt-fix-deploy-instructions.md  neon-deploy-instructions.md  pyproject.toml  redeploy-instructions.md  requirements.txt
backend/src/: database.py  main.py
backend/src/agent/: README.md  __init__.py  error_handler.py  intent_detector.py  mcp_executor.py  openai_agent.py  schemas.py  tool_selector.py
backend/src/api/: auth.py  chat.py  reminders.py  search.py  tags.py  tasks.py
backend/src/auth/: jwt.py  passwords.py
backend/src/dapr/: jobs.py  pubsub.py
backend/src/db/: connection.py  drop_all_tables.sql  init.py  session.py
backend/src/db/migrations/: 001_add_priority_to_task.sql  002_add_due_date_to_task.sql  003_add_recurrence_rule_to_task.sql  004_create_tag_tables.sql  005_create_reminder_table.sql  (+6 more)
backend/src/events/: publisher.py
backend/src/mcp/: __init__.py  tools.py
backend/src/middleware/: auth.py
backend/src/models/: chat.py  event.py  reminder.py  tag.py  task.py  task_tag.py  user.py
backend/src/services/: chat_service.py  event_publisher.py  reminder_service.py  search_service.py  tag_service.py  task_service.py  user_service.py
backend/tests/: __init__.py  conftest.py  test_integration.py  test_security.py  test_tasks.py
backend/tests/contract/: test_tool_schemas.py
backend/tests/integration/: __init__.py  test_mcp_tools.py
backend/tests/unit/: __init__.py  test_agent_intent.py  test_task_service_complete.py  test_task_service_create.py  test_task_service_list.py
(+247 files in other folders)
